# genome-predictor

./: .gitignore  README.md  pyproject.toml
config/: download.yaml  knockout.yaml  preprocess.yaml  tokenize.yaml  train.yaml  vectorize.yaml
config/dataset/: preprocess.yaml  train.yaml
config/logdir/: default.yaml  none.yaml
config/pipeline/classifier/: lgbm.yaml
config/pipeline/feature_filtering/: vt.yaml
config/tuner/: default.yaml
config/vectorizer/: kmer.yaml  sentencepiece.yaml
experiments/capsule/kmer/1344/: cv_results.csv  metrics.csv  predictions.csv
experiments/capsule/kmer/21824/: cv_results.csv  metrics.csv  predictions.csv
experiments/capsule/kmer/320/: cv_results.csv  metrics.csv  predictions.csv
experiments/capsule/kmer/5440/: cv_results.csv  metrics.csv  predictions.csv
experiments/capsule/kmer/64/: cv_results.csv  metrics.csv  predictions.csv
experiments/capsule/kmer/87360/: cv_results.csv  metrics.csv  predictions.csv
experiments/capsule/sentencepiece/16000/: cv_results.csv  predictions.csv
notebooks/: 01_preprocessing.ipynb  02_model_selection_and_evaluation.ipynb  03_capsule_knockout.ipynb  04_gene_knockout.ipynb  05_sp_vocab_analysis.ipynb
src/genpred/: __init__.py  download.py  ko_capsule.py  ko_gene.py  ko_vf.py  preprocess.py  tokenization.py  train.py  vectorization.py
src/genpred/knockout/: plots.py  utils.py
src/genpred/training/: loaders.py  metrics.py  pipeline.py  tokenizer.py  utils.py  vectorizers.py
src/genpred/utils/: analysis.py  logger.py  paths.py  rich.py  sequences.py  training.py  utils.py
(+2862 files in other folders)
